--- a/index.html
+++ b/index.html
@@ -26,13 +26,74 @@
             <li><a href="#kontakt">KONTAKT</a></li>
         </ul>
     </nav>
+    <main>
+        <section>
+            <article>
+                <h2>BRANDNEU!</h2>
+                <h3>Genre Übergreifend</h3>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP01.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP02.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP03.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP04.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP05.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP06.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP07.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP08.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP09.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP10.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP11.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP12.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP13.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP14.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP15.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP16.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP17.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP18.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP19.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP20.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP21.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP22.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP23.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP24.jpg"></a></div>
+                </div>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
+                </div>
+            </article>
+        </section>
+    </main>
 
-
-    <p><br></p>
 
 
     <div class="big">ddd</div>
 
+    <footer>
+        <div> unsere Adresse</div>
+
+    </footer>
+
+
+
+    <!-- #################-->
+    <!-- #  JavaScripte  # -->
+    <!-- #################-->
 
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 
@@ -41,7 +102,7 @@
         window.onscroll = function () { scrollFunction() };
 
         function scrollFunction() {
-            if (document.body.scrollTop > 250 || document.documentElement.scrollTop > 250) {
+            if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
                 document.getElementById("header").style.fontSize = "1.5rem";
             } else {
                 document.getElementById("header").style.fontSize = "6rem";
