--- a/index.html
+++ b/index.html
@@ -35,43 +35,35 @@
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP01.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP02.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP03.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP04.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP05.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP06.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP07.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP08.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP09.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP10.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP11.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP12.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP13.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP14.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP15.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP16.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP17.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP18.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP19.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP20.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP21.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP22.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP23.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP24.jpg"></a></div>
-                </div>
-                <div class="angebot-reihe">
+
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
@@ -82,18 +74,19 @@
 
 
 
-    <div class="big">ddd</div>
 
     <footer>
-        <div> unsere Adresse</div>
-
+        <div>
+            <div class="ft-links"><a href="#"> KONTAKT:</a></div>
+            <div class="ft-rechts"><a href="#">:IMPRESSUM</a></div>
+        </div>
     </footer>
 
 
 
-    <!-- #################-->
+    <!-- ################# -->
     <!-- #  JavaScripte  # -->
-    <!-- #################-->
+    <!-- ################# -->
 
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 
