--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header id="header">
-        <h1>Die Plattenkiste</h1>
+        <h1><a href="#">Die Plattenkiste</a></h1>
         <img src="assets/img/plattensammlung.jpeg" alt="Meine Plattensammlung">
     </header>
     <nav>
@@ -67,6 +67,26 @@
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
+                </div>
+                <!-- ENDE: BRANDNEU! -->
+                <h2>Unsere Empfehlungen:</h2>
+                <h3>Genre Übergreifend</h3>
+                <div class="angebot-reihe">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP01.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP02.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP03.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP04.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP05.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP06.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP07.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP08.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP09.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP10.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP11.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP12.jpg"></a></div>
                 </div>
             </article>
         </section>
