--- a/index.html
+++ b/index.html
@@ -87,6 +87,58 @@
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP10.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP11.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP12.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP13.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP14.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP15.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP16.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP17.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP18.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP19.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP20.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP21.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP22.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP23.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP24.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP25.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP26.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP27.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP28.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP29.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP30.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP31.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP32.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP33.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP34.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP35.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP36.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP37.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP38.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP39.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP40.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP41.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP42.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP43.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP44.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP45.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP46.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP47.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP48.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP49.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP50.jpg"></a></div>
+
                 </div>
             </article>
         </section>
