--- a/empfehlungen.html
+++ b/empfehlungen.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="assets/img/plattensammlung.jpeg" alt="Meine Plattensammlung">
+        <img src="assets/img/empfehlungen.jpeg" alt="Meine Plattensammlung">
     </header>
     <nav>
         <ul>
@@ -27,98 +27,77 @@
     <main>
         <section>
             <article>
-                <div id="new" class="sprunganker"></div>
-                <h2>BRANDNEU!</h2>
+                <div id="empfehlungen" class="sprunganker"></div>
+                <h2>Unsere Empfehlungen:</h2>
                 <h3>Genre Übergreifend</h3>
-                <div class="brandneu">
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP01.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP02.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP03.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP04.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP05.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP06.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP07.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP08.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP09.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP10.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP11.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP12.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP13.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP14.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP15.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP16.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP17.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP18.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP19.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP20.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP21.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP22.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP23.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP24.jpg"></a></div>
-
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
-                </div>
-                <!-- ENDE: BRANDNEU! :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  -->
-                <h3>Unsere Empfehlungen:</h3>
-
-                <div class="empfehlungenklein">
-
+                <div class="empfehlungen">
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP01.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP02.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP03.jpg"></a></div>
 
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP04.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP05.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP06.jpg"></a></div>
 
-
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP07.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP08.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP09.jpg"></a></div>
 
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP10.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP11.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP12.jpg"></a></div>
 
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP13.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP14.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP15.jpg"></a></div>
 
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP16.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP17.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP18.jpg"></a></div>
 
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP19.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP20.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP21.jpg"></a></div>
 
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP22.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP23.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP24.jpg"></a></div>
 
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP25.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP26.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP27.jpg"></a></div>
 
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP28.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP29.jpg"></a></div>
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP30.jpg"></a></div>
 
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP31.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP32.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP33.jpg"></a></div>
 
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP34.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP35.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP36.jpg"></a></div>
 
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP37.jpg"></a></div>
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP38.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP39.jpg"></a></div>
 
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP40.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP41.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP42.jpg"></a></div>
 
-
-
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP43.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP44.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP45.jpg"></a></div>
 
-
-
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP46.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP47.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP48.jpg"></a></div>
 
-                    <p><a href="empfehlungen.html#empfehlungen">Weitere Empfehlungen...<a /</p>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP49.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="assets/img/cover/cLP50.jpg"></a></div>
+
                 </div>
             </article>
         </section>
