--- a/assets/html/ankauf.html
+++ b/assets/html/ankauf.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Die Plattenkiste :: Ankauf</title>
 </head>
 
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="assets/img/plattensammlung.jpeg" alt="Meine Plattensammlung">
+        <img src="../img/plattensammlung.jpeg" alt="Meine Plattensammlung">
     </header>
     <nav>
         <ul>
             <li><a href="home.html#home">HOME</a></li>
-            <li><a href="index.html#new">BRANDNEU!</a></li>
+            <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
             <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
