--- a/assets/html/kontakt.html
+++ b/assets/html/kontakt.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Die Plattenkiste :: Willkommen</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Die Plattenkiste :: Kontakt</title>
 </head>
 
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="assets/img/home.jpeg" alt="Meine Plattensammlung">
+        <img src="../img/plattensammlung.jpeg" alt="Meine Plattensammlung">
     </header>
     <nav>
         <ul>
             <li><a href="home.html#home">HOME</a></li>
-            <li><a href="index.html#new">BRANDNEU!</a></li>
+            <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
             <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
@@ -27,18 +27,20 @@
     <main>
         <section>
             <article>
-                <div id="home" class="sprunganker"></div>
-                <h2>WILLKOMMEN</h2>
+                <div id="kontakt" class="sprunganker"></div>
+                <h2>KONTAKT</h2>
 
-                <p>You don't believe in the Force, do you? I'm surprised you had the courage to take the responsibility
-                    yourself. Hey, Luke! May the Force be with you. Don't be too proud of this technological terror
-                    you've constructed. The ability to destroy a planet is insignificant next to the power of the Force.
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
                 </p>
-                <p>
-                    The more you tighten your grip, Tarkin, the more star systems will slip through your fingers. No!
-                    Alderaan is peaceful. We have no weapons. You can't possibly… Dantooine. They're on Dantooine. What
-                    good is a reward if you ain't around to use it? Besides, attacking that battle station ain't my idea
-                    of courage. It's more like…suicide.
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
+                </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
                 </p>
                 </div>
             </article>
@@ -62,9 +64,9 @@
         </div>
         <div class="footermenu">
             <ul>
-                <li><a href="#home">Top</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="#kontakt">Top</a></li>
+                <li><a href="kontakt.html#kontakt">Kontakt</a></li>
+                <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
     </footer>
@@ -78,14 +80,14 @@
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 
     <script>
-        // When the user scrolls down 250px from the top of the document, resize the header's font size
+        // When the user scrolls down 350px from the top of the document, resize the header's font size
         window.onscroll = function () { scrollFunction() };
 
         function scrollFunction() {
-            if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
                 document.getElementById("header").style.fontSize = "1.5rem";
             } else {
-                document.getElementById("header").style.fontSize = "6rem";
+                document.getElementById("header").style.fontSize = "4rem";
             }
         }
     </script>
