--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="home.html#home">HOME</a></li>
+            <li><a href="assets/html/home.html#home">HOME</a></li>
             <li><a href="index.html#new">BRANDNEU!</a></li>
-            <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
-            <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
-            <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
-            <li><a href="kontakt.html#kontakt">KONTAKT</a></li>
+            <li><a href="assets/html/empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
+            <li><a href="assets/html/ankauf.html#ankauf">ANKAUF</a></li>
+            <li><a href="assets/html/wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
+            <li><a href="assets/html/kontakt.html#kontakt">KONTAKT</a></li>
         </ul>
     </nav>
     <main>
