--- a/assets/html/wohnzimmer.html
+++ b/assets/html/wohnzimmer.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Die Plattenkiste :: Kontakt</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Die Plattenkiste :: Wohnzimmerkonzerte</title>
 </head>
 
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="assets/img/plattensammlung.jpeg" alt="Meine Plattensammlung">
+        <img src="../img/wohnzimmer.jpeg" alt="Wohnzimmer Konzerte">
     </header>
     <nav>
         <ul>
             <li><a href="home.html#home">HOME</a></li>
-            <li><a href="index.html#new">BRANDNEU!</a></li>
+            <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
             <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
@@ -27,8 +27,8 @@
     <main>
         <section>
             <article>
-                <div id="kontakt" class="sprunganker"></div>
-                <h2>KONTAKT</h2>
+                <div id="wohnzimmer" class="sprunganker"></div>
+                <h2>UNSER WOHNZIMMER</h2>
 
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
                     quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
@@ -64,7 +64,7 @@
         </div>
         <div class="footermenu">
             <ul>
-                <li><a href="#kontakt">Top</a></li>
+                <li><a href="#wohnzimmer">Top</a></li>
                 <li><a href="#">Kontakt</a></li>
                 <li><a href="#">Impressum</a></li>
             </ul>
@@ -87,7 +87,7 @@
             if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
                 document.getElementById("header").style.fontSize = "1.5rem";
             } else {
-                document.getElementById("header").style.fontSize = "6rem";
+                document.getElementById("header").style.fontSize = "4rem";
             }
         }
     </script>
