neue Platten - neue Bilder

--- a/assets/html/empfehlungen.html
+++ b/assets/html/empfehlungen.html
@@ -97,6 +97,14 @@
 
                     <div class="angebot"><a href="#"><img src="../img/cover/cLP49.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="../img/cover/cLP50.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP51.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP52.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP53.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP54.jpg"></a></div>
+
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP55.jpg"></a></div>
+                    <div class="angebot"><a href="#"><img src="../img/cover/cLP56.jpg"></a></div>
 
                 </div>
             </article>
@@ -121,8 +129,8 @@
         <div class="footermenu">
             <ul>
                 <li><a href="#empfehlungen">Top</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="kontakt.html#kontak">Kontakt</a></li>
+                <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
     </footer>
