--- a/assets/html/kontakt.html
+++ b/assets/html/kontakt.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="../img/plattensammlung.jpeg" alt="Meine Plattensammlung">
+        <img src="../img/kontakt.jpg" alt="Kontakt">
     </header>
     <nav>
         <ul>
