--- a/assets/html/wohnzimmer.html
+++ b/assets/html/wohnzimmer.html
@@ -65,8 +65,8 @@
         <div class="footermenu">
             <ul>
                 <li><a href="#wohnzimmer">Top</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="kontakt.html#kontak">Kontakt</a></li>
+                <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
     </footer>
