--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP44.jpg"></a></div>
                     <div class="angebot"><a href="#"><img src="assets/img/cover/cLP47.jpg"></a></div>
 
-                    <p><a href="empfehlungen.html#empfehlungen">Weitere Empfehlungen...<a /</p>
+                    <p><a href="assets/html/empfehlungen.html#empfehlungen">Weitere Empfehlungen...<a /</p>
                 </div>
             </article>
         </section>
@@ -114,8 +114,8 @@
         <div class="footermenu">
             <ul>
                 <li><a href="#new">Top</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="assets/html/kontakt.html#kontak">Kontakt</a></li>
+                <li><a href="assets/html/impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
     </footer>
