--- a/assets/html/ankauf.html
+++ b/assets/html/ankauf.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="../img/plattensammlung.jpeg" alt="Meine Plattensammlung">
+        <img src="../img/ankauf.jpg" alt="Sammlungen ankaufen">
     </header>
     <nav>
         <ul>
@@ -65,8 +65,8 @@
         <div class="footermenu">
             <ul>
                 <li><a href="#ankauf">Top</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="kontakt.html#kontak">Kontakt</a></li>
+                <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
     </footer>
@@ -87,7 +87,7 @@
             if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
                 document.getElementById("header").style.fontSize = "1.5rem";
             } else {
-                document.getElementById("header").style.fontSize = "6rem";
+                document.getElementById("header").style.fontSize = "4rem";
             }
         }
     </script>
