--- a/assets/html/impressum.html
+++ b/assets/html/impressum.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Die Plattenkiste :: Willkommen</title>
+    <title>Die Plattenkiste :: Impressum</title>
 </head>
 
 <body>
     <header id="header">
-        <h1><a href="#">Die Plattenkiste</a></h1>
-        <img src="../img/home.jpeg" alt="Meine Plattensammlung">
+        <h1><a href="#">Die Plattenbox</a></h1>
+        <img src="../img/impressum.jpg" alt="Wohnzimmer Konzerte">
     </header>
     <nav>
         <ul>
@@ -27,19 +27,20 @@
     <main>
         <section>
             <article>
-                <div id="home" class="sprunganker"></div>
-                <h2>WILLKOMMEN</h2>
+                <div id="wohnzimmer" class="sprunganker"></div>
+                <h2>UNSER WOHNZIMMER</h2>
 
-                <p>You don't believe in the Force, do you? I'm surprised you had the courage to take the responsibility
-                    yourself. Hey, Luke! May the Force be with you. Don't be too proud of this technological terror
-                    you've constructed. The ability to destroy a planet is insignificant next to the power of the Force.
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
                 </p>
-                <div><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
-                <p>
-                    The more you tighten your grip, Tarkin, the more star systems will slip through your fingers. No!
-                    Alderaan is peaceful. We have no weapons. You can't possibly… Dantooine. They're on Dantooine. What
-                    good is a reward if you ain't around to use it? Besides, attacking that battle station ain't my idea
-                    of courage. It's more like…suicide.
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
+                </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
+                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
+                    voluptates?
                 </p>
                 </div>
             </article>
@@ -63,7 +64,7 @@
         </div>
         <div class="footermenu">
             <ul>
-                <li><a href="#home">Top</a></li>
+                <li><a href="#wohnzimmer">Top</a></li>
                 <li><a href="kontakt.html#kontak">Kontakt</a></li>
                 <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
