neue Platten - neue Bilder

--- a/assets/html/impressum.html
+++ b/assets/html/impressum.html
@@ -27,8 +27,8 @@
     <main>
         <section>
             <article>
-                <div id="wohnzimmer" class="sprunganker"></div>
-                <h2>UNSER WOHNZIMMER</h2>
+                <div id="impressum" class="sprunganker"></div>
+                <h2>IMPRE§§um</h2>
 
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
                     quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
