home TEXT und social media links

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -26,21 +26,72 @@
     </nav>
     <main>
         <section>
-            <article>
+            <article class="home">
                 <div id="home" class="sprunganker"></div>
-                <h2>WILLKOMMEN</h2>
+                <h2>FÜHL DICH WILLKOMMEN</h2>
+                <h3>Etwas über mich:</h3>
 
-                <p>You don't believe in the Force, do you? I'm surprised you had the courage to take the responsibility
-                    yourself. Hey, Luke! May the Force be with you. Don't be too proud of this technological terror
-                    you've constructed. The ability to destroy a planet is insignificant next to the power of the Force.
+                <p>So lange ich ich denken kann, war ich Musik begeistert. Meine frühste Erinnerung, reicht
+                    weit zurück
+                    ins Jahr 1976. Mein Vater kam nach Hause (wahrscheinlich von der Arbeit). Es war ein Freitag.
+                    Er hatte eine bunte Pappe unterm Arm. Erst später konnte ich sehen, dass auf der Pappe vier seltsame
+                    Harlekine sich tanzend in den Armen lagen. Mein Vater ging mit der Pappe direkt ins
+                    Wohnzimmer zum
+                    Plattenspieler. Natürlich wußte ich damals nicht, was ein Plattenspieler war. Er zog aus der Pappe
+                    eine schwarze Scheibe heraus und legte sie behutsam auf den Palltenteller. Die schwarze Platte
+                    drehte
+                    sich. Er atmete ganz entspannt zweimal tief
+                    durch und zündete sich eine Zigarette an. Ein Lächeln huschte über sein Gesicht, bevor die Nadel das
+                    Vinyl berührte.</p>
+                <p>BANG! Auf einmal war das ganze Wohnzimmer von Magie erfüllt. MOTORENGERÄUSCHE. KRACH.
+                    STIMMENGEWIRR.
+                    Und
+                    dann - nach ca. eineinhalb Minuten - dieser Rhytmus... der mich wie ein Blitz durchfuhr... meine
+                    Muskeln
+                    zuckten... ich musste mich bewegen...
+                    Mein Vater erhebte
+                    sich aus seinem Ohrensessel und kam zu mir und wir tobten. pogten... wir tanzten zu KISS 'Detroit
+                    Rock City' durchs heimische Wohnzimmer.</p>
+                <p>Ich war schockverliebt! Und diese Liebe zur Musik begleitet mich seit damals... 1976.
                 </p>
-                <div><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
+                <p>ZEITSPRUNG: 2000 erfüllte ich mir eien großen Traum, ich eröffnete DIE PLATTENKISTE.
+                    Möglich wurde
+                    das durch meinen Umzug "aufs Land" in einen alten Gutshof. In einer Baracke richtete ich einen
+                    kleinen
+                    Plattenladen ein. Von Anfang an war DIE PLATTENKISTE als Liebhaberei konzipiert, meine Miete und
+                    mein Butterbrot verdiene ich in einem ganz normalen Job. Seit 2004 bzw. 2006 unterstützen mich zwei
+                    Brüder im Geiste.</p>
                 <p>
-                    The more you tighten your grip, Tarkin, the more star systems will slip through your fingers. No!
-                    Alderaan is peaceful. We have no weapons. You can't possibly… Dantooine. They're on Dantooine. What
-                    good is a reward if you ain't around to use it? Besides, attacking that battle station ain't my idea
-                    of courage. It's more like…suicide.
+                    Wir führen Vinyl, CD, Filme (DVD und Blu-ray), Poster, Bücher und Magazine.
+                    Alle wichtigen Neuheiten finden Sie bei uns im Laden – aber vorab schon mal die Musik-Genres auf
+                    einem Blick.
                 </p>
+
+                <h5 class="home">MUSIK GENERES AUF VINYL UND CD</h5>
+                <div>
+                    <ul>
+                        <li>POP & ROCK</li>
+                        <li>ELECTRONIC</li>
+                        <li>FUNK & SOUL</li>
+                        <li>HIP HOP</li>
+                        <li>JAZZ</li>
+                        <li>BLUES & GOSPEL</li>
+                        <li>REGGAE</li>
+                        <li>WORLD MUSIC</li>
+                        <li>WESTERN & COUNTRY</li>
+                        <li>FOLK</li>
+                        <li>SINGER & SONGWRITER</li>
+                        <li>GOTHIC & INDUSTRIAL</li>
+                        <li>HARDCORE & PUNK</li>
+                        <li>METAL</li>
+                        <li>ENTERTAINMENT & INSTRUMENTAL</li>
+                        <li>KLASSIK</li>
+                        <li>SOUNDTRACKS</li>
+                    </ul>
+                </div>
+
+                <div><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
+
                 </div>
             </article>
         </section>
@@ -68,6 +119,11 @@
                 <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <div>&copy 2022</div>
     </footer>
 
 
