--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                 <li><a href="assets/html/impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <div>&copy 2022</div>
     </footer>
 
 
