--- a/assets/html/impressum.html
+++ b/assets/html/impressum.html
@@ -28,19 +28,15 @@
         <section>
             <article>
                 <div id="impressum" class="sprunganker"></div>
-                <h2>IMPRE§§um</h2>
+                <h2>IMPRE§§UM</h2>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
-                </p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
-                </p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
+
+                <h5> HAFTUNG FÜR LINKS:</h5>
+                <p>
+                    Hiermit distanzieren wir uns ausdrücklich von allen Inhalten aller gelinkten Seiten auf unserer
+                    Homepage und machen uns diese Inhalte nicht zu eigen. Diese Erklärung gilt für alle auf
+                    www.dieplattenkiste.de angebrachten Links. Wir übernehmen keinerlei Haftung für die hier angebotenen
+                    Informationen.
                 </p>
                 </div>
             </article>
@@ -64,11 +60,16 @@
         </div>
         <div class="footermenu">
             <ul>
-                <li><a href="#wohnzimmer">Top</a></li>
+                <li><a href="#impressum">Top</a></li>
                 <li><a href="kontakt.html#kontak">Kontakt</a></li>
                 <li><a href="impressum.html#impressum">Impressum</a></li>
             </ul>
         </div>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <div>&copy 2022</div>
     </footer>
 
 
@@ -80,11 +81,11 @@
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 
     <script>
-        // When the user scrolls down 250px from the top of the document, resize the header's font size
+        // When the user scrolls down 350px from the top of the document, resize the header's font size
         window.onscroll = function () { scrollFunction() };
 
         function scrollFunction() {
-            if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
                 document.getElementById("header").style.fontSize = "1.5rem";
             } else {
                 document.getElementById("header").style.fontSize = "4rem";
