GRID:: neue Galerie

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -58,7 +58,8 @@
                     Möglich wurde
                     das durch meinen Umzug "aufs Land" in einen alten Gutshof. In einer Baracke richtete ich einen
                     kleinen
-                    Plattenladen ein. Von Anfang an war DIE PLATTENKISTE als Liebhaberei konzipiert, meine Miete und
+                    Plattenladen ein. Von Anfang an war DIE PLATTENKISTE als Liebhaberei konzipiert.
+                    Meine Miete und
                     mein Butterbrot verdiene ich in einem ganz normalen Job. Seit 2004 bzw. 2006 unterstützen mich zwei
                     Brüder im Geiste.</p>
                 <p>
@@ -67,7 +68,7 @@
                     einem Blick.
                 </p>
 
-                <h5 class="home">MUSIK GENERES AUF VINYL UND CD</h5>
+                <h5 class="home">MUSIK GENERES AUF VINYL UND COMPACT DISC</h5>
                 <div>
                     <ul>
                         <li>POP & ROCK</li>
@@ -89,6 +90,29 @@
                         <li>SOUNDTRACKS</li>
                     </ul>
                 </div>
+
+                <h5 class="home">FÜR KINDERE UND ALLE, DIE NICHT ERWASCHEN WERDEN</h5>
+                ​<div>
+                    <ul>
+                        <li>HÖRSPIELE</li>
+                        <li>HÖRBCHER</li>
+                        <li>KINDER LIEDER</li>
+                        <li>MÄRCHEN</li>
+                    </ul>
+                </div>
+
+                <h5 class="home">VORSICHT! Lesen bildet: BÜCHER</h5>
+                ​<div>
+                    <ul>
+                        <li>ROMANE</li>
+                        <li>BILDBÄNDE</li>
+                        <li>MUSIKLITERATUR</li>
+                        <li>BIOGRAFIEN</li>
+                        <li>AUSSTELLUNGSKATALOGE</li>
+                        <li>BESTSELLER</li>
+                    </ul>
+                </div>
+
 
                 <div><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
 
