--- a/index.html
+++ b/index.html
@@ -31,41 +31,122 @@
                 <h2>BRANDNEU!</h2>
                 <h3>Genre Übergreifend</h3>
                 <div class="brandneu">
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP01.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP02.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP03.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP01.jpg"></a></div>
+                        <div class="wrapper-content">Künstler<br>Titel</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP02.jpg"></a></div>
+                        <div class="wrapper-content">Text 2</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP03.jpg"></a></div>
+                        <div class="wrapper-content">Text 3</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP04.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP05.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP06.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP04.jpg"></a></div>
+                        <div class="wrapper-content">Text 4</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP05.jpg"></a></div>
+                        <div class="wrapper-content">Text 5</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP06.jpg"></a></div>
+                        <div class="wrapper-content">Text 6</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP07.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP08.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP09.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP07.jpg"></a></div>
+                        <div class="wrapper-content">Text 7</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP08.jpg"></a></div>
+                        <div class="wrapper-content">Text 8</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP09.jpg"></a></div>
+                        <div class="wrapper-content">Text 9</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP10.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP11.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP12.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP10.jpg"></a></div>
+                        <div class="wrapper-content">Text 10</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP11.jpg"></a></div>
+                        <div class="wrapper-content">Text 11</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP12.jpg"></a></div>
+                        <div class="wrapper-content">Text 12</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP13.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP14.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP15.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP13.jpg"></a></div>
+                        <div class="wrapper-content">Text 13</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP14.jpg"></a></div>
+                        <div class="wrapper-content">Text 14</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP15.jpg"></a></div>
+                        <div class="wrapper-content">Text 15</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP16.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP17.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP18.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP16.jpg"></a></div>
+                        <div class="wrapper-content">Text 16</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP17.jpg"></a></div>
+                        <div class="wrapper-content">Text 17</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP18.jpg"></a></div>
+                        <div class="wrapper-content">Text 18</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP19.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP20.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP21.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP19.jpg"></a></div>
+                        <div class="wrapper-content">Text 19</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP20.jpg"></a></div>
+                        <div class="wrapper-content">Text 20</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP21.jpg"></a></div>
+                        <div class="wrapper-content">Text 21</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP22.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP23.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP24.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP22.jpg"></a></div>
+                        <div class="wrapper-content">Text 22</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP23.jpg"></a></div>
+                        <div class="wrapper-content">Text 23</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP24.jpg"></a></div>
+                        <div class="wrapper-content">Text 24</div>
+                    </div>
 
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
-                    <div class="angebot"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP25.jpg"></a></div>
+                        <div class="wrapper-content">Text 19</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP26.jpg"></a></div>
+                        <div class="wrapper-content">Text 20</div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="wrapper"><a href="#"><img src="assets/img/cover/newLP27.jpg"></a></div>
+                        <div class="wrapper-content">Text 21</div>
+                    </div>
                 </div>
                 <!-- ENDE: BRANDNEU! :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  -->
 
